--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
   </noscript>
 
   <!-- Page Title -->
-  <title>Bootstrap 5 HTML Template</title>
+  <title>ANV Resume</title>
 
 </head>
 <body class="">
@@ -55,10 +55,10 @@
           <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center fade-in" href="./index.html" data-scroll>
               <picture class="avatar me-3" data-scroll data-scroll-speed="10" data-scroll-direction="horizontal" data-scroll-position="top">
-                <img class="img-fluid rounded-circle" src="./assets/images/avatar-small.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
+                <img class="img-fluid rounded-circle" src="./assets/images/photo.jpg" alt="HTML Bootstrap Template by Pixel Rocket">
               </picture>
               <span class="fw-bolder fs-6 d-flex justify-content-start" data-scroll-section>
-                <span class="fade-in" data-scroll data-scroll-speed="2" data-scroll-delay=".03" data-scroll-position="top">Jenny Smith</span>
+                <span class="fade-in" data-scroll data-scroll-speed="2" data-scroll-delay=".03" data-scroll-position="top">Alejandra Navarro</span>
               </span>
             </a>
             <button class="btn-icon navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -93,19 +93,10 @@
             <!-- Page Content Goes Here -->
 
             <div class="position-relative ps-xl-7">
-                <div class="tracking-wide text-vertical mt-4 small d-none d-xl-block"><a class="text-vertical-link me-3"
-                        href="#">Facebook</a>
-                    &middot; <a class="text-vertical-link mx-3" href="#">Twitter</a> &middot; <a
-                        class="text-vertical-link ms-3" href="#">Github</a></div>
-
-                <h1 class="display-3 col-xxl-8 mb-8">Let's work together on your next project</h1>
+                <h1 class="display-3 col-xxl-8 mb-8">Contact me</h1>
 
                 <h4 class="subtitle-sm mb-3">Email me</h4>
-                <a class="link-body" href="#">hello@jenny.smith</a>
-
-
-                <h4 class="subtitle-sm mb-3 mt-8">Call me</h4>
-                <a class="link-body" href="#">+44 (0)208 334 4567</a>
+                <a class="link-body" href="#">navarro.alejandra@pucp.edu.pe</a>
 
                 <h4 class="subtitle-sm mt-8 mb-4">Send Me A Message</h4>
 
@@ -146,31 +137,31 @@
 
                                 <!-- Service Type-->
                                 <div class="col-12">
-                                    <label class="form-label d-block">What Service Do You Require?</label>
+                                    <label class="form-label d-block">What is your project about?</label>
                                     <div class="d-flex align-items-center flex-wrap">
                                         <div class="form-check-custom me-2 mb-2">
                                             <input class="form-check-input-custom" type="checkbox" id="shopify">
-                                            <label class="form-check-custom-label" for="shopify">Shopify</label>
+                                            <label class="form-check-custom-label" for="shopify">Social Policy</label>
                                         </div>
                                         <div class="form-check-custom me-2 mb-2">
                                             <input class="form-check-input-custom" type="checkbox" id="wordpress">
-                                            <label class="form-check-custom-label" for="wordpress">Wordpress</label>
+                                            <label class="form-check-custom-label" for="wordpress">Education</label>
                                         </div>
                                         <div class="form-check-custom me-2 mb-2">
                                             <input class="form-check-input-custom" type="checkbox" id="magento">
-                                            <label class="form-check-custom-label" for="magento">Magento</label>
+                                            <label class="form-check-custom-label" for="magento">Inequalities</label>
                                         </div>
                                         <div class="form-check-custom me-2 mb-2">
                                             <input class="form-check-input-custom" type="checkbox" id="design">
-                                            <label class="form-check-custom-label" for="design">Web Design</label>
+                                            <label class="form-check-custom-label" for="design">Policy evaluation</label>
                                         </div>
                                         <div class="form-check-custom me-2 mb-2">
                                             <input class="form-check-input-custom" type="checkbox" id="uxdesign">
-                                            <label class="form-check-custom-label" for="uxdesign">UX Design</label>
+                                            <label class="form-check-custom-label" for="uxdesign">Higher Education</label>
                                         </div>
                                         <div class="form-check-custom me-2 mb-2">
                                             <input class="form-check-input-custom" type="checkbox" id="custom">
-                                            <label class="form-check-custom-label" for="custom">Custom</label>
+                                            <label class="form-check-custom-label" for="custom">Other</label>
                                         </div>
                                     </div>
                                 </div>
@@ -180,7 +171,7 @@
                                 <div class="col-12">
                                     <label class="form-label">Tell Me About Your Project</label>
                                     <textarea name="about" class="form-control" cols="30" rows="12"
-                                        placeholder="Hi Jenny, I would like to talk about the design and build of a custom Ecommerce platform that uses the Shopify API and React.js frontend..."></textarea>
+                                        placeholder="Hi Ale, I would like to talk about the design and implementation of a counselling intervention for deprived students..."></textarea>
                                 </div>
                                 <!-- / Project Information-->
 
